# Auto-Navigation-RoboCar

./: README.md
ROS_Program/: .gitignore  README.md
ROS_Program/src/nav_mod/: CMakeLists.txt  README.md
ROS_Program/src/nav_mod/launch/: amcl_demo.launch  amcl_with_ekf.launch  view_navigation.launch
ROS_Program/src/nav_mod/launch/include/: move_base.launch.xml
ROS_Program/src/robocar_description/: CMakeLists.txt  package.xml
ROS_Program/src/robocar_driver/: CMakeLists.txt  README.md  package.xml
ROS_Program/src/robocar_driver/cfg/: robocar_params.yaml.cfg
ROS_Program/src/robocar_driver/config/: robocar_params.yaml
ROS_Program/src/robocar_driver/include/: driver.h
ROS_Program/src/robocar_driver/include/serial_mod/: driver.h
ROS_Program/src/robocar_driver/launch/: robocar_calibrate_angular.launch  robocar_calibrate_imu.launch  robocar_calibrate_linear.launch  robocar_camera.launch  robocar_core.launch  robocar_driver.launch  robocar_joy.launch  robocar_start.launch
ROS_Program/src/robocar_driver/scripts/: calibrate_angular.py  calibrate_linear.py  joy_teleop.py  odom_ekf.py
ROS_Program/src/robocar_driver/src/: robocar_driver.cpp  serial_node.cpp
ROS_Program/src/robocar_nav/: CMakeLists.txt  README.md  package.xml
ROS_Program/src/robocar_nav/launch/: robocar_mapping.launch  robocar_mapping_exploration.launch  robocar_mapping_frontier.launch  robocar_mapping_hector.launch  robocar_mapping_karto.launch  robocar_nav.launch  robocar_nav_multi.launch
ROS_Program/src/robocar_nav/launch/include/: teb_move_base.launch  teb_move_base_omni.launch
ROS_Program/src/robocar_navigation/: CMakeLists.txt  package.xml
ROS_Program/src/robocar_navigation/launch/: odometry_localization_demo.launch
ROS_Program/src/robocar_slam/: CMakeLists.txt  README.md  package.xml
ROS_Program/src/robocar_slam/launch/: cartographer_demo.launch  gmapping_demo.launch  hector_demo.launch  karto_demo.launch  robocar_cartographer.launch  view_slam.launch
ROS_Program/src/robocar_version/: README.md  package.xml
ROS_Program/src/robocar_version/launch/: ar_track_camera.launch  face_detector.launch  motion_detector.launch  usb_cam_with_calibration.launch  uvc_camera_with_calibration.launch
ROS_Program/src/rplidar_ros/launch/: rplidar.launch
ROS_Program/src/serial_mod/: CMakeLists.txt  package.xml
ROS_Program/src/serial_mod/src/: serial_node.cpp
ROS_Program/src/slam_mod/: package.xml
ROS_Program/src/vision_mod/: CMakeLists.txt  package.xml
ROS_Program/src/vision_mod/launch/: ar_track_follower.launch  ar_track_kinect.launch  freenect_with_calibration.launch  ork_rviz.launch
