<?xml version="1.0"?>
<package format="2">
  <name>robocar_description</name>
  <version>0.0.0</version>
  <description>The robocar_description package</description>

  <maintainer email="javidxi1012@163.com">javid</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
